1999-05-17  Keith Seitz  <keiths@cygnus.com>

	* interp.c (NUM_MCORE_REGS): Increase by one to allow access to PC.
	(sim_resume): Correct off by one instruction error when a breakpoint
	is hit.

1999-05-08  Felix Lee  <flee@cygnus.com>

	* configure: Regenerated to track ../common/aclocal.m4 changes.
	
1999-05-10  Nick Clifton  <nickc@cygnus.com>

	* interp.c (sim_resume): Record PC in case it is needed for error
	messages and the original has been corrupted.

1999-05-07  Nick Clifton  <nickc@cygnus.com>

	* interp.c (sim_resume): Fix typo 'oze' -> 'doze'.
	(util): Handle 0x50FF stubs properly.


1999-04-29  Nick Clifton  <nickc@cygnus.com>

	* interp.c (set_initial_gprs): Only display memory range if
	verbose option has been set.

1999-04-22  Nick Clifton  <nickc@cygnus.com>

	* interp.c: Add tracing and verbose options.
	Fixed trap and syscall emulations.

1999-04-08  Nick Clifton  <nickc@cygnus.com>

	* interp.c: New file: Simulator for MCore.
	* sysdep.h: New file: Systems definitions for MCore simulator.
	* configure.in: New file: Configure script for MCore simulator.
	* configure: New file: Genreated.
	* config,in: New file: Config support.
	* Makefile.in: New file: Meta makefile for MCore simulator.
