@@ -1,3 +1,7 @@
+1999-05-21  Nick Clifton  <nickc@cygnus.com>
+
+	* interp.c (sim_resume): Add more tracing output.
+
 1999-05-17  Keith Seitz  <keiths@cygnus.com>
 
 	* interp.c (NUM_MCORE_REGS): Increase by one to allow access to PC.
